--- a/src/index.scss
+++ b/src/index.scss
@@ -30,11 +30,13 @@ body {
   padding: 0;
   min-width: 320px;
   min-height: 100vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
   #root {
     display: grid;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: auto 1fr;
-    grid-template-areas: "header header" "nav main";
+    grid-template-areas: "header" "main";
     min-height: 100%;
     width: 100%;
   }
