--- a/src/components/common/Masonry/MasonryCards.scss
+++ b/src/components/common/Masonry/MasonryCards.scss
@@ -2,8 +2,10 @@
   width: 100%;
   margin: 0 auto;
   box-sizing: border-box;
-  overflow: hidden;
+  // overflow: hidden;
   opacity: 0;
+  position: relative;
+  z-index: 0;
   transition: opacity 0.3s ease-out;
   * {
     box-sizing: border-box !important;
@@ -11,23 +13,33 @@
   .masonry-container__card {
     cursor: default;
     padding: 0.5rem;
+    z-index: 0;
+    position: relative;
     .masonry-container__card__content {
       border-radius: 0.5rem;
       background-color: #fff;
       border: 1px solid #e0e0e0;
       // max-height: 32rem;
-      overflow: hidden;
       transition: box-shadow 0.2s ease-out;
       font-size: 0.875rem;
       word-wrap: break-word;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      position: relative;
       h2 {
         margin: 0.8rem 1rem 0 1rem;
         padding: 0;
         line-height: 1.5rem;
         font-size: 1rem;
+      }
+      .masonry-container__card__content__icon {
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translate3d(-50%, -50%, 0);
+        opacity: 0;
+        transition: opacity 0.2s ease-out;
       }
       .masonry-container__card__content__text {
         min-height: 6rem;
@@ -40,12 +52,59 @@
         padding: 0 1rem;
         gap: 0.25rem;
       }
+      .masonry-container__card__content__image {
+        overflow: hidden;
+        border-bottom-left-radius: 0.5rem;
+        border-bottom-right-radius: 0.5rem;
+      }
+      .masonry-container__card__content__actions {
+        background: rgba(255, 255, 255, 0.9);
+        border-bottom-left-radius: 0.5rem;
+        border-bottom-right-radius: 0.5rem;
+        display: flex;
+        justify-content: center;
+        opacity: 0;
+        transition: opacity 0.2s ease-out;
+        &[data-float="true"] {
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          right: 0;
+        }
+      }
       &:hover {
         box-shadow: 0 0 0.5rem 1px rgba(0, 0, 0, 0.15);
       }
     }
     &.masonry-container__card--easing {
       transition: transform 400ms cubic-bezier(0.77, 0, 0.175, 1);
+    }
+    &.masonry-container__card--easing[data-disable-transition="true"],
+    &.masonry-container__card--easing[aria-pressed="true"] {
+      transition: none;
+      .masonry-container__card__content {
+        box-shadow: 0 0 1rem 5px rgba(0, 0, 0, 0.15);
+      }
+    }
+    &.masonry-container__card--easing[data-is-current-card="true"] {
+      z-index: 1;
+    }
+    &[data-is-selected="true"] {
+      .masonry-container__card__content {
+        outline: 4px solid var(--colour-primary);
+      }
+    }
+    &[data-is-selected="true"],
+    &:hover {
+      .masonry-container__card__content__icon,
+      .masonry-container__card__content__actions {
+        opacity: 1;
+      }
+    }
+    &[data-is-dragging="true"] {
+      .masonry-container__card__content__actions {
+        opacity: 0;
+      }
     }
   }
 }
