--- a/src/components/common/Masonry/MasonryCards.scss
+++ b/src/components/common/Masonry/MasonryCards.scss
@@ -3,10 +3,12 @@
   margin: 0 auto;
   box-sizing: border-box;
   // overflow: hidden;
-  opacity: 0;
+  // opacity: 0;
   position: relative;
   z-index: 0;
-  transition: opacity 0.3s ease-out;
+  transition:
+    opacity 0.3s ease-out,
+    width 0.3s ease-out;
   * {
     box-sizing: border-box !important;
   }
@@ -14,7 +16,10 @@
     cursor: default;
     padding: 0.5rem;
     z-index: 0;
-    position: relative;
+    transition: transform 400ms cubic-bezier(0.77, 0, 0.175, 1);
+    position: absolute;
+    top: 0;
+    left: 0;
     .masonry-container__card__content {
       border-radius: 0.5rem;
       background-color: #fff;
@@ -76,17 +81,14 @@
         box-shadow: 0 0 0.5rem 1px rgba(0, 0, 0, 0.15);
       }
     }
-    &.masonry-container__card--easing {
-      transition: transform 400ms cubic-bezier(0.77, 0, 0.175, 1);
-    }
-    &.masonry-container__card--easing[data-disable-transition="true"],
-    &.masonry-container__card--easing[aria-pressed="true"] {
+    &.masonry-container__card[data-disable-transition="true"],
+    &.masonry-container__card[aria-pressed="true"] {
       transition: none;
       .masonry-container__card__content {
         box-shadow: 0 0 1rem 5px rgba(0, 0, 0, 0.15);
       }
     }
-    &.masonry-container__card--easing[data-is-current-card="true"] {
+    &.masonry-container__card[data-is-current-card="true"] {
       z-index: 1;
     }
     &[data-is-selected="true"] {
@@ -105,6 +107,11 @@
       .masonry-container__card__content__actions {
         opacity: 0;
       }
+    }
+  }
+  &[data-transitions-paused="true"] {
+    .masonry-container__card {
+      transition: none;
     }
   }
 }
