--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+@import "@fontsource/roboto/400.css"; /* Regular */
+@import "@fontsource/roboto/700.css"; /* Bold */
+
 :root {
   --colour-primary: #f4e286;
   --colour-secondary: #f6edf7;
