--- a/src/index.scss
+++ b/src/index.scss
@@ -2,10 +2,12 @@
 @import "@fontsource/roboto/700.css"; /* Bold */
 
 :root {
-  --colour-primary: #f4e286;
+  --colour-primary: #ffe080;
   --colour-secondary: #f6edf7;
+  --colour-background: #fffae9;
+  --colour-cards: #fff3cd;
   --colour-text: #202124;
-  --colour-borders: #dadce0;
+  --colour-borders: #dbdbc8;
   --padding: 0.5rem;
 
   font-family: Roboto, Arial, sans-serif;
