--- a/src/components/common/Masonry/MasonryCards.scss
+++ b/src/components/common/Masonry/MasonryCards.scss
@@ -25,7 +25,9 @@
       background-color: var(--colour-cards);
       border: 1px solid #e0e0e0;
       // max-height: 32rem;
-      transition: box-shadow 0.2s ease-out;
+      transition:
+        box-shadow 0.2s ease-out,
+        background-color 0.05s linear;
       font-size: 0.875rem;
       word-wrap: break-word;
       display: flex;
